--- a/Progetto_CS.ipynb
+++ b/Progetto_CS.ipynb
@@ -280,131 +280,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cast_id</th>\n",
-       "      <th>character</th>\n",
-       "      <th>credit_id</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Neytiri</td>\n",
-       "      <td>52fe48009251416c750ac9cb</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8691</td>\n",
-       "      <td>Zoe Saldana</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Col. Quaritch</td>\n",
-       "      <td>52fe48009251416c750ac9cf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>32747</td>\n",
-       "      <td>Stephen Lang</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Trudy Chacon</td>\n",
-       "      <td>52fe48009251416c750ac9d3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17647</td>\n",
-       "      <td>Michelle Rodriguez</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Norm Spellman</td>\n",
-       "      <td>52fe48009251416c750ac9dd</td>\n",
-       "      <td>2</td>\n",
-       "      <td>59231</td>\n",
-       "      <td>Joel David Moore</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Selfridge</td>\n",
-       "      <td>52fe48009251416c750ac9e1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1771</td>\n",
-       "      <td>Giovanni Ribisi</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  cast_id      character                 credit_id gender     id  \\\n",
-       "1       3        Neytiri  52fe48009251416c750ac9cb      1   8691   \n",
-       "3       4  Col. Quaritch  52fe48009251416c750ac9cf      2  32747   \n",
-       "4       5   Trudy Chacon  52fe48009251416c750ac9d3      1  17647   \n",
-       "6       7  Norm Spellman  52fe48009251416c750ac9dd      2  59231   \n",
-       "5       8      Selfridge  52fe48009251416c750ac9e1      2   1771   \n",
-       "\n",
-       "                 name order  \n",
-       "1         Zoe Saldana     1  \n",
-       "3        Stephen Lang     3  \n",
-       "4  Michelle Rodriguez     4  \n",
-       "6    Joel David Moore     6  \n",
-       "5     Giovanni Ribisi     5  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.04 s ± 17.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
     }
    ],
    "source": [
-    "#ho creato un set di tabelle normalizzate che mostrano il cast \n",
-    "#per i primi 100 film del dataset credit\n",
-    "nomi_film = credits['movie_id'][:100]\n",
+    "#ho creato un set di tabelle normalizzate che mostrano il cast per i primi 100 film del dataset credit\n",
     "\n",
-    "for i in range(len(nomi_film)):\n",
+    "n_film = credits['movie_id'][:50]\n",
+    "\n",
+    "for i in range(len(n_film)):\n",
     "    whole_cast = json.loads(credits['cast'][i])\n",
-    "    colonne = list(whole_cast[0].keys())\n",
-    "    globals()['movie_'+str(nomi_film[i])] = pd.DataFrame(columns=colonne)\n",
+    "    colonne = ['cast_id','character','credit_id','gender','id','name']\n",
+    "    globals()['movie_'+str(n_film[i])] = pd.DataFrame(columns = colonne)\n",
+    "    \n",
     "    for a in range(len(whole_cast)):\n",
-    "        globals()['movie_'+str(nomi_film[i])].loc[a] = list(whole_cast[a].values())\n",
+    "        tempp = list(whole_cast[a].values())\n",
+    "        del tempp[-1]\n",
+    "        globals()['movie_'+str(n_film[i])].loc[a] = tempp  \n",
     "\n",
     "#per chiamare la tabella normalizzata basta scrivere movie_(movie_id)\n",
     "#ad esempio :\n",
-    "\n",
-    "movie_19995.sort_values('cast_id').head()"
+    "movie_19995.head()"
    ]
   },
   {
@@ -416,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +398,7 @@
        "4                               John Carter      24139100"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +544,7 @@
        "4           132  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -681,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +703,7 @@
        "4802             5                    3  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +734,7 @@
        " ('Italiano', 188)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -912,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +889,7 @@
        "4                    Walt Disney Pictures   961000000  2007"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1013,7 +917,7 @@
        "Name: revenue, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -1050,7 +954,7 @@
        "Name: revenue, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1096,7 +1000,7 @@
        " (2010, 'Paramount Pictures'): 1519557910}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1072,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
