--- a/Progetto_CS.ipynb
+++ b/Progetto_CS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "credits = pd.read_csv('tmdb_5000_credits.csv')\n",
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -46,12 +44,12 @@
     "for i in range(len(credits)):\n",
     "    temp = json.loads(credits.cast[i])\n",
     "    array.append(len(temp))\n",
-    "credits['n_cast_mambers'] = array\n"
+    "credits['n_cast_mambers'] = array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +148,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...              27  "
       ]
      },
-     "execution_count": 252,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +178,7 @@
        "3091"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,18 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "movies['anno'] = movies['release_date'].str.split('-', expand=True)[0]\n",
-    "#sub = movies[['homepage','release_date']]\n",
-    "#sub['anno'] = sub['release_date'].str.split('-', expand=True)[0]"
+    "movies['anno'] = movies['release_date'].str.split('-', expand=True)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +223,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +364,7 @@
        "4  Michelle Rodriguez  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +476,7 @@
        "4                               John Carter      24139100"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -512,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +622,7 @@
        "4           132  "
       ]
      },
-     "execution_count": 261,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +781,7 @@
        "4441            53                    7  "
       ]
      },
-     "execution_count": 263,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +812,7 @@
        " ('Italiano', 188)]"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,8 +845,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#nel dataset c'è un film che non ha casa di produzione con anno 2015, lascio vuoto\n",
@@ -857,21 +857,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "companies = []\n",
     "revenues = []\n",
     "years = []\n",
-    "for i in range(len(subs)):\n",
-    "    production_c = json.loads(subs['production_companies'][i])\n",
+    "for i in range(len(movies)):\n",
+    "    production_c = json.loads(movies['production_companies'][i])\n",
     "    for k in production_c:\n",
     "        companies.append(k.get('name'))\n",
-    "        revenues.append(subs['revenue'][i])\n",
-    "        years.append(int(subs['release_date'][i].year))\n",
+    "        revenues.append(movies['revenue'][i])\n",
+    "        years.append(int(movies['release_date'][i].year))\n",
     "#il metodo più conveniente è creare un dataframe in cui inserisco i dati, serve anche dopo\n",
     "dataf = pd.DataFrame(columns=['company','revenue','year'])\n",
     "dataf['company'], dataf['revenue'], dataf['year'] = companies, revenues, years \n",
@@ -880,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +951,7 @@
        "13676                lucky crow films        0  2005"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 66,
    "metadata": {
     "scrolled": false
    },
@@ -981,7 +979,7 @@
        "Name: revenue, dtype: int64"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 67,
    "metadata": {
     "scrolled": false
    },
@@ -1018,7 +1016,7 @@
        "Name: revenue, dtype: int64"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,9 +1028,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 68,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1064,7 +1062,7 @@
        " (2010, 'Paramount Pictures'): 1519557910}"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -1114,67 +1112,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies[movies['gross_margin'] < 0].groupby('anno').size().head()#.sort_values(ascending=False).head()"
+    "movies[movies['gross_margin'] < 0].groupby('anno').size().head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4803 entries, 0 to 4802\n",
-      "Data columns (total 23 columns):\n",
-      "budget                  4803 non-null int64\n",
-      "genres                  4803 non-null object\n",
-      "homepage                1712 non-null object\n",
-      "id                      4803 non-null int64\n",
-      "keywords                4803 non-null object\n",
-      "original_language       4803 non-null object\n",
-      "original_title          4803 non-null object\n",
-      "overview                4800 non-null object\n",
-      "popularity              4803 non-null float64\n",
-      "production_companies    4803 non-null object\n",
-      "production_countries    4803 non-null object\n",
-      "release_date            4802 non-null datetime64[ns]\n",
-      "revenue                 4803 non-null int64\n",
-      "runtime                 4801 non-null float64\n",
-      "spoken_languages        4803 non-null object\n",
-      "status                  4803 non-null object\n",
-      "tagline                 3959 non-null object\n",
-      "title                   4803 non-null object\n",
-      "vote_average            4803 non-null float64\n",
-      "vote_count              4803 non-null int64\n",
-      "anno                    4802 non-null object\n",
-      "dominio                 4803 non-null object\n",
-      "gross_margin            4803 non-null int64\n",
-      "dtypes: datetime64[ns](1), float64(3), int64(5), object(14)\n",
-      "memory usage: 863.1+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "movies.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
